[package]
name = "kv_store_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"]}
csv = "1.1.6"
rusqlite = { version = "0.27.0", features = ["bundled"]}
serde = "1.0.138"
serde_json = "1.0.82"
serde_yaml = "0.8.24"
